--- a/NorthWestLabs/Views/Seattle/Details.cshtml
+++ b/NorthWestLabs/Views/Seattle/Details.cshtml
@@ -104,8 +104,9 @@
                 </div>
             </fieldset>
         </div>
+        <br />
         <p>
-            @Html.ActionLink("Edit", "Edit", new { id = Model.ClientID }, new { @class = "btn btn-primary btn-lg" }) |
+            @Html.ActionLink("Edit", "Edit", new { id = Model.ClientID }, new { @class = "btn btn-primary btn-lg" }) 
             @Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-primary btn-lg" })
         </p>
     </div>
