--- a/NorthWestLabs/Views/Seattle/WorkIndex.cshtml
+++ b/NorthWestLabs/Views/Seattle/WorkIndex.cshtml
@@ -4,15 +4,10 @@
     ViewBag.Title = "WorkIndex";
 }
 
-<h2>WorkIndex</h2>
-
 <body style="background-image: url(../../Content/Images/hans-reniers-lQGJCMY5qcM-unsplash.jpg); background-size: cover;">
     <div class="jumbotron" style="font-size: 13px;">
-        <h2>All Employees</h2>
-        <br />
-        <p style="font-size: 15px;">
-            @Html.ActionLink("Create New", "WorkOrderCreate", null, new { @class = "btn btn-primary btn-lg" })
-        </p>
+        <h2>All Work Orders</h2>
+        <br />        
         <table class="table">
             <tr>
                 <th>
@@ -81,6 +76,7 @@
 
         <p style="font-size: 15px;">
             @Html.ActionLink("Return to Home", "SeattleHome", null, new { @class = "btn btn-primary btn-lg" })
+            @Html.ActionLink("Create New", "WorkOrderCreate", null, new { @class = "btn btn-primary btn-lg" })
         </p>
     </div>
 </body>
