--- a/NorthWestLabs/Views/Seattle/WorkOrderDelete.cshtml
+++ b/NorthWestLabs/Views/Seattle/WorkOrderDelete.cshtml
@@ -81,13 +81,14 @@
                     </dl>
                 </div>
             </fieldset>
+            <br />
             @using (Html.BeginForm())
             {
                 @Html.AntiForgeryToken()
 
                 <div class="form-actions no-color">
-                    <input type="submit" value="Delete" class="btn btn-default" /> |
-                    @Html.ActionLink("Back to List", "WorkIndex")
+                    <input type="submit" value="Delete" class="btn btn-primary btn-lg" /> 
+                    @Html.ActionLink("Back to List", "WorkIndex", null, new { @class = "btn btn-primary btn-lg" })
                 </div>
             }
         </div>
