--- a/NorthWestLabs/Views/Seattle/Delete.cshtml
+++ b/NorthWestLabs/Views/Seattle/Delete.cshtml
@@ -105,13 +105,14 @@
                 </div>
             </fieldset>
         </div>
+        <br />
 
         @using (Html.BeginForm())
         {
             @Html.AntiForgeryToken()
 
             <div class="form-actions no-color">
-                <input type="submit" value="Delete" class="btn btn-default" /> |
+                <input type="submit" value="Delete" class="btn btn-primary btn-lg" /> 
                 @Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-primary btn-lg" })
             </div>
         }
