--- a/NorthWestLabs/Views/Seattle/EmployeeDelete.cshtml
+++ b/NorthWestLabs/Views/Seattle/EmployeeDelete.cshtml
@@ -58,13 +58,14 @@
                     </dl>
                 </div>
             </fieldset>
+            <br />
             @using (Html.BeginForm())
             {
                 @Html.AntiForgeryToken()
 
                 <div class="form-actions no-color">
-                    <input type="submit" value="Delete" class="btn btn-default" /> |
-                    @Html.ActionLink("Back to List", "EmployeeIndex")
+                    <input type="submit" value="Delete" class="btn btn-primary btn-lg" /> 
+                    @Html.ActionLink("Back to List", "EmployeeIndex", null, new { @class = "btn btn-primary btn-lg" })
                 </div>
             }
         </div>
