--- a/NorthWestLabs/Views/Seattle/EmployeeEdit.cshtml
+++ b/NorthWestLabs/Views/Seattle/EmployeeEdit.cshtml
@@ -7,7 +7,7 @@
 
 
 <body style="background-image: url(../../Content/Images/hans-reniers-lQGJCMY5qcM-unsplash.jpg); background-size: cover;">
-    <div class="jumbotron">
+    <div class="jumbotron" style="font-size: 15px;">
         <h1>Edit Employee Profile</h1>
         <br />
         @using (Html.BeginForm())
@@ -58,17 +58,15 @@
                         @Html.ValidationMessageFor(model => model.EmpType, "", new { @class = "text-danger" })
                     </div>
                 </div>
-
+                
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Save" class="btn btn-default" />
+                        <input type="submit" value="Save" class="btn btn-primary btn-lg" />
+                        @Html.ActionLink("Back to List", "EmployeeIndex", null, new { @class = "btn btn-primary btn-lg" })
                     </div>
                 </div>
             </div>
         }
-
-        <div>
-            @Html.ActionLink("Back to List", "EmployeeIndex", null, new { @class = "btn btn-primary btn-lg" })
-        </div>
+     
     </div>
 </body>
