--- a/NorthWestLabs/Views/Seattle/WorkOrderCreate.cshtml
+++ b/NorthWestLabs/Views/Seattle/WorkOrderCreate.cshtml
@@ -7,7 +7,7 @@
 
 <body style="background-image: url(../../Content/Images/hans-reniers-lQGJCMY5qcM-unsplash.jpg); background-size: cover;">
     <div class="jumbotron" style="font-size: 15px;">
-        <center><h1>New Client</h1></center>
+        <center><h1>New Work Order</h1></center>
         <hr />
         <fieldset>
             @using (Html.BeginForm())
@@ -15,8 +15,7 @@
                 @Html.AntiForgeryToken()
 
                 <div class="form-horizontal">
-                    <h4>WorkOrder</h4>
-                    <hr />
+                    
                     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                     <div class="form-group">
                         @Html.LabelFor(model => model.ReceivedDate, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -86,15 +85,13 @@
 
                     <div class="form-group">
                         <div class="col-md-offset-2 col-md-10">
-                            <input type="submit" value="Create" class="btn btn-default" />
+                            <input type="submit" value="Create" class="btn btn-primary btn-lg" />
+                            @Html.ActionLink("Back to List", "WorkIndex", null, new { @class = "btn btn-primary btn-lg" })
                         </div>
                     </div>
                 </div>
             }
         </fieldset>
-        <br />
-        <div>
-            @Html.ActionLink("Back to List", "WorkIndex")
-        </div>
+        
     </div>
 </body>
