--- a/NorthWestLabs/Views/Seattle/WorkOrderEdit.cshtml
+++ b/NorthWestLabs/Views/Seattle/WorkOrderEdit.cshtml
@@ -6,7 +6,7 @@
 
 
 <body style="background-image: url(../../Content/Images/hans-reniers-lQGJCMY5qcM-unsplash.jpg); background-size: cover;">
-    <div class="jumbotron">
+    <div class="jumbotron" style="font-size: 15px;">
         <h1>Edit Work Order</h1>
         <br />
         @using (Html.BeginForm())
@@ -86,14 +86,12 @@
 
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Save" class="btn btn-default" />
+                        <input type="submit" value="Save" class="btn btn-primary btn-lg" />
+                        @Html.ActionLink("Back to List", "WorkIndex", null, new { @class = "btn btn-primary btn-lg" })
                     </div>
                 </div>
             </div>
         }
-
-        <div>
-            @Html.ActionLink("Back to List", "WorkIndex")
-        </div>
+        
     </div>
 </body>
