--- a/NorthWestLabs/Views/Clients/EditProfile.cshtml
+++ b/NorthWestLabs/Views/Clients/EditProfile.cshtml
@@ -101,6 +101,7 @@
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
                         <input type="submit" value="Save" class="btn btn-primary btn-lg" />
+                        @Html.ActionLink("Back to Profile", "ViewProfile", new { id=Model.ClientID}, new { @class="btn btn-primary btn-lg"})
                     </div>
                 </div>
             </div>
