--- a/NorthWestLabs/Views/Home/Pricing.cshtml
+++ b/NorthWestLabs/Views/Home/Pricing.cshtml
@@ -41,7 +41,7 @@
             </tr>
             <tr>
                 <td>Profiling Screen (PF)</td>
-                <td>Details all compouns</td>
+                <td>Details all compounds</td>
                 <td>$1100 - $1600</td>
                 <td>3 - 6 Days</td>
             </tr>
